# internal/restapi/operations/other/get_public_health_responses.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package other
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"otusgruz/internal/models"
+)
+
+// GetPublicHealthOKCode is the HTTP code returned for type GetPublicHealthOK
+const GetPublicHealthOKCode int = 200
+
+/*
+GetPublicHealthOK Успех
+
+swagger:response getPublicHealthOK
+*/
+type GetPublicHealthOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.DefaultStatusResponse `json:"body,omitempty"`
+}
+
+// NewGetPublicHealthOK creates GetPublicHealthOK with default headers values
+func NewGetPublicHealthOK() *GetPublicHealthOK {
+
+	return &GetPublicHealthOK{}
+}
+
+// WithPayload adds the payload to the get public health o k response
+func (o *GetPublicHealthOK) WithPayload(payload *models.DefaultStatusResponse) *GetPublicHealthOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get public health o k response
+func (o *GetPublicHealthOK) SetPayload(payload *models.DefaultStatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetPublicHealthOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetPublicHealthInternalServerErrorCode is the HTTP code returned for type GetPublicHealthInternalServerError
+const GetPublicHealthInternalServerErrorCode int = 500
+
+/*
+GetPublicHealthInternalServerError Серверная ошибка
+
+swagger:response getPublicHealthInternalServerError
+*/
+type GetPublicHealthInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetPublicHealthInternalServerError creates GetPublicHealthInternalServerError with default headers values
+func NewGetPublicHealthInternalServerError() *GetPublicHealthInternalServerError {
+
+	return &GetPublicHealthInternalServerError{}
+}
+
+// WithPayload adds the payload to the get public health internal server error response
+func (o *GetPublicHealthInternalServerError) WithPayload(payload *models.Error) *GetPublicHealthInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get public health internal server error response
+func (o *GetPublicHealthInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetPublicHealthInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
