# internal/restapi/operations/other/post_public_signup_responses.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package other
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"otusgruz/internal/models"
+)
+
+// PostPublicSignupOKCode is the HTTP code returned for type PostPublicSignupOK
+const PostPublicSignupOKCode int = 200
+
+/*
+PostPublicSignupOK Успешная Регистрация
+
+swagger:response postPublicSignupOK
+*/
+type PostPublicSignupOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.DefaultStatusResponse `json:"body,omitempty"`
+}
+
+// NewPostPublicSignupOK creates PostPublicSignupOK with default headers values
+func NewPostPublicSignupOK() *PostPublicSignupOK {
+
+	return &PostPublicSignupOK{}
+}
+
+// WithPayload adds the payload to the post public signup o k response
+func (o *PostPublicSignupOK) WithPayload(payload *models.DefaultStatusResponse) *PostPublicSignupOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post public signup o k response
+func (o *PostPublicSignupOK) SetPayload(payload *models.DefaultStatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostPublicSignupOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostPublicSignupInternalServerErrorCode is the HTTP code returned for type PostPublicSignupInternalServerError
+const PostPublicSignupInternalServerErrorCode int = 500
+
+/*
+PostPublicSignupInternalServerError Серверная ошибка
+
+swagger:response postPublicSignupInternalServerError
+*/
+type PostPublicSignupInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostPublicSignupInternalServerError creates PostPublicSignupInternalServerError with default headers values
+func NewPostPublicSignupInternalServerError() *PostPublicSignupInternalServerError {
+
+	return &PostPublicSignupInternalServerError{}
+}
+
+// WithPayload adds the payload to the post public signup internal server error response
+func (o *PostPublicSignupInternalServerError) WithPayload(payload *models.Error) *PostPublicSignupInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post public signup internal server error response
+func (o *PostPublicSignupInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostPublicSignupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
