# internal/restapi/operations/rest_server_api.go
@@ -51,8 +51,8 @@ func NewRestServerAPI(spec *loads.Document) *RestServerAPI {
 		OtherGetAuthHandler: other.GetAuthHandlerFunc(func(params other.GetAuthParams) middleware.Responder {
 			return middleware.NotImplemented("operation other.GetAuth has not yet been implemented")
 		}),
-		OtherGetHealthHandler: other.GetHealthHandlerFunc(func(params other.GetHealthParams) middleware.Responder {
-			return middleware.NotImplemented("operation other.GetHealth has not yet been implemented")
+		OtherGetPublicHealthHandler: other.GetPublicHealthHandlerFunc(func(params other.GetPublicHealthParams) middleware.Responder {
+			return middleware.NotImplemented("operation other.GetPublicHealth has not yet been implemented")
 		}),
 		UsercrudGetUserGUIDHandler: user_c_r_u_d.GetUserGUIDHandlerFunc(func(params user_c_r_u_d.GetUserGUIDParams) middleware.Responder {
 			return middleware.NotImplemented("operation user_c_r_u_d.GetUserGUID has not yet been implemented")
@@ -60,11 +60,11 @@ func NewRestServerAPI(spec *loads.Document) *RestServerAPI {
 		UsercrudPatchUserGUIDHandler: user_c_r_u_d.PatchUserGUIDHandlerFunc(func(params user_c_r_u_d.PatchUserGUIDParams) middleware.Responder {
 			return middleware.NotImplemented("operation user_c_r_u_d.PatchUserGUID has not yet been implemented")
 		}),
-		OtherPostLoginHandler: other.PostLoginHandlerFunc(func(params other.PostLoginParams) middleware.Responder {
-			return middleware.NotImplemented("operation other.PostLogin has not yet been implemented")
+		OtherPostPublicLoginHandler: other.PostPublicLoginHandlerFunc(func(params other.PostPublicLoginParams) middleware.Responder {
+			return middleware.NotImplemented("operation other.PostPublicLogin has not yet been implemented")
 		}),
-		OtherPostSignupHandler: other.PostSignupHandlerFunc(func(params other.PostSignupParams) middleware.Responder {
-			return middleware.NotImplemented("operation other.PostSignup has not yet been implemented")
+		OtherPostPublicSignupHandler: other.PostPublicSignupHandlerFunc(func(params other.PostPublicSignupParams) middleware.Responder {
+			return middleware.NotImplemented("operation other.PostPublicSignup has not yet been implemented")
 		}),
 		UsercrudPostUserHandler: user_c_r_u_d.PostUserHandlerFunc(func(params user_c_r_u_d.PostUserParams) middleware.Responder {
 			return middleware.NotImplemented("operation user_c_r_u_d.PostUser has not yet been implemented")
@@ -109,16 +109,16 @@ type RestServerAPI struct {
 	UsercrudDeleteUserGUIDHandler user_c_r_u_d.DeleteUserGUIDHandler
 	// OtherGetAuthHandler sets the operation handler for the get auth operation
 	OtherGetAuthHandler other.GetAuthHandler
-	// OtherGetHealthHandler sets the operation handler for the get health operation
-	OtherGetHealthHandler other.GetHealthHandler
+	// OtherGetPublicHealthHandler sets the operation handler for the get public health operation
+	OtherGetPublicHealthHandler other.GetPublicHealthHandler
 	// UsercrudGetUserGUIDHandler sets the operation handler for the get user GUID operation
 	UsercrudGetUserGUIDHandler user_c_r_u_d.GetUserGUIDHandler
 	// UsercrudPatchUserGUIDHandler sets the operation handler for the patch user GUID operation
 	UsercrudPatchUserGUIDHandler user_c_r_u_d.PatchUserGUIDHandler
-	// OtherPostLoginHandler sets the operation handler for the post login operation
-	OtherPostLoginHandler other.PostLoginHandler
-	// OtherPostSignupHandler sets the operation handler for the post signup operation
-	OtherPostSignupHandler other.PostSignupHandler
+	// OtherPostPublicLoginHandler sets the operation handler for the post public login operation
+	OtherPostPublicLoginHandler other.PostPublicLoginHandler
+	// OtherPostPublicSignupHandler sets the operation handler for the post public signup operation
+	OtherPostPublicSignupHandler other.PostPublicSignupHandler
 	// UsercrudPostUserHandler sets the operation handler for the post user operation
 	UsercrudPostUserHandler user_c_r_u_d.PostUserHandler
 
@@ -204,8 +204,8 @@ func (o *RestServerAPI) Validate() error {
 	if o.OtherGetAuthHandler == nil {
 		unregistered = append(unregistered, "other.GetAuthHandler")
 	}
-	if o.OtherGetHealthHandler == nil {
-		unregistered = append(unregistered, "other.GetHealthHandler")
+	if o.OtherGetPublicHealthHandler == nil {
+		unregistered = append(unregistered, "other.GetPublicHealthHandler")
 	}
 	if o.UsercrudGetUserGUIDHandler == nil {
 		unregistered = append(unregistered, "user_c_r_u_d.GetUserGUIDHandler")
@@ -213,11 +213,11 @@ func (o *RestServerAPI) Validate() error {
 	if o.UsercrudPatchUserGUIDHandler == nil {
 		unregistered = append(unregistered, "user_c_r_u_d.PatchUserGUIDHandler")
 	}
-	if o.OtherPostLoginHandler == nil {
-		unregistered = append(unregistered, "other.PostLoginHandler")
+	if o.OtherPostPublicLoginHandler == nil {
+		unregistered = append(unregistered, "other.PostPublicLoginHandler")
 	}
-	if o.OtherPostSignupHandler == nil {
-		unregistered = append(unregistered, "other.PostSignupHandler")
+	if o.OtherPostPublicSignupHandler == nil {
+		unregistered = append(unregistered, "other.PostPublicSignupHandler")
 	}
 	if o.UsercrudPostUserHandler == nil {
 		unregistered = append(unregistered, "user_c_r_u_d.PostUserHandler")
@@ -321,7 +321,7 @@ func (o *RestServerAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/health"] = other.NewGetHealth(o.context, o.OtherGetHealthHandler)
+	o.handlers["GET"]["/public/health"] = other.NewGetPublicHealth(o.context, o.OtherGetPublicHealthHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
@@ -333,11 +333,11 @@ func (o *RestServerAPI) initHandlerCache() {
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"]["/login"] = other.NewPostLogin(o.context, o.OtherPostLoginHandler)
+	o.handlers["POST"]["/public/login"] = other.NewPostPublicLogin(o.context, o.OtherPostPublicLoginHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"]["/signup"] = other.NewPostSignup(o.context, o.OtherPostSignupHandler)
+	o.handlers["POST"]["/public/signup"] = other.NewPostPublicSignup(o.context, o.OtherPostPublicSignupHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
